# ticketing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: SQLiteTicketRepository.md  domain-notes.md  horodatage.md  sqlite.md  usecases.md
docs/architecture/: adapters.md
scripts/: db_init.py  init.sh
src/: main.py
src/adapters/: README.md  fixed_clock.py  system_clock.py
src/adapters/api/: ticket_router.py  user_router.py
src/adapters/db/: database.py  mappers.py  schema.sql  ticket_repository_inmemory.py  ticket_repository_sqlite.py  user_repository_inmemory.py  user_repository_sqlite.py
src/application/: README.md
src/application/usecases/: assign_ticket.py  create_ticket.py  create_user.py  get_user_by_username.py  list_tickets.py  list_user.py  start_ticket.py
src/config/: settings.py
src/domain/: README.md  __init__.py  exceptions.py  priority.py  status.py  ticket.py  user.py  utils.py
src/ports/: README.md  clock.py  ticket_repository.py  user_repository.py
tests/: README.md  conftest.py  conftests.py
tests/application/: test_assign_ticket.py  test_create_ticket.py  test_create_user.py  test_inmemory_user_repo.py  test_list_tickets.py  test_start_ticket.py  test_user_repository_sqlite.py
tests/domain/: test_ticket.py  test_utils.py
tests/e2e/: test_api.py
