[tool.poetry]
name = "ticketing-starter"
version = "0.1.0"
description = "Starter project for R4.01 Ticketing - Hexagonal architecture"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
